[button:group] Fix vertical alignement

--- a/src/components/discovery-button/discovery-button.scss
+++ b/src/components/discovery-button/discovery-button.scss
@@ -71,6 +71,10 @@
       }
 
       &.button--center {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
       }
     }
 
